# MapU

./: .env.example  .gitattributes  .gitignore  AMA_BENCH_LEADERBOARD_RESULT_20260518.md  ARCHITECTURE.md  CLAIM_EVIDENCE_APPENDIX.md  DOMAINS.md  GLOBAL_MEMORY_BENCHMARK_EXECUTION_PLAN.md  GLOBAL_MEMORY_BENCHMARK_STATUS.md  INTEGRATIONS.md  LICENSE  LOCAL_ARTIFACT_POLICY.md  PRIORITIES.md  PROBLEM_SPACE.md  PUBLIC_RELEASE_AUDIT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: CLI_OPERATOR_GUIDE.md  MEMORY_BENCHMARKS.md  VALIDATION_EVIDENCE_MATRIX.md
src/mapu/: __init__.py  cli.py  client.py  config.py  context_learning.py  types.py
src/mapu/api/: app.py  controllers.py  dtos.py
src/mapu/authority/: __init__.py  source_policy.py
src/mapu/computation/: registry.py
src/mapu/db/: base.py  engine.py
src/mapu/entity/: __init__.py  identity.py  search.py  service.py
src/mapu/evaluation/: __init__.py  ama_bench.py  benchmark_score_gate.py  cases.py  memory_benchmark_smoke.py  memoryarena.py  metrics.py  reporting.py  runner.py  types.py
src/mapu/evidence/: __init__.py  chunking.py  docx.py  ingest.py  parsers.py  pdf.py  plaintext.py  retrieval.py  types.py
src/mapu/extraction/: __init__.py  abstention.py  grounding.py  llm.py  merge.py  ml.py  rules.py  service.py  spacy_base.py  types.py
src/mapu/investigation/: evaluator.py  executor.py  planner.py  service.py  types.py
src/mapu/mcp/: server.py  tool_contract.py
src/mapu/models/: __init__.py  attestation.py  audit.py  (+11 more)
tests/: conftest.py
tests/fixtures/: golden_examples.py
tests/integration/: conftest.py  test_evaluation_runner.py  test_extraction_pipeline.py  test_golden_fixtures.py  test_schema_invariants.py
tests/unit/: test_api.py  test_benchmark_gate_scripts.py  test_chunking.py  test_cli.py  test_cli_e2e_smoke.py  test_client.py  test_computation_registry.py  test_context_learning.py  test_continuity_replay_harness.py  test_corpus_cleanup.py  test_docx_parser.py  test_embedding_provider.py  test_env_example.py  test_evaluation.py  test_evidence_parsing.py  test_extraction.py  test_extraction_service.py  test_handle_service.py  test_identity.py  test_ingest_service.py  test_investigation.py  test_llm_extractor.py  test_mapu_mem0_adapter.py  test_mcp_server.py  test_mcp_stdio_smoke.py  test_memory_benchmark_harnesses.py  test_memory_benchmark_score_gate.py  test_memory_benchmark_smoke.py  test_ml_extractors.py  test_parser_registry.py  test_pdf_parser.py  test_protocol_compliance.py  test_public_docs_claims.py  test_query.py  test_repair.py  test_repos.py  test_source_policy.py  test_state_machines.py  test_truth_policy.py  test_truth_service.py
tools/: ama_bench_harness.py  analyze_beam_failures.py  benchmark_memory_relex_compare.py  benchmark_smoke_gate.ps1  check_full_sweep_progress.ps1  clean_local_artifacts.ps1  cli_e2e_smoke.py  continuity_replay_harness.py  mapu_mem0_adapter.py  mcp_relex_smoke.py  mcp_stdio_smoke.py  memory_benchmark_score_gate.py  memoryarena_harness.py  prepublish_benchmark_gate.ps1  public_github_install_audit.ps1  release_surface_audit.ps1  report_full_sweep_leaderboard.py  report_global_memory_benchmark_coverage.py  run_continuous_hardened_benchmarks.ps1  run_full_leaderboard_sweeps.ps1  run_full_leaderboard_sweeps_parallel.ps1  run_mem0_benchmark_with_mapu.py  run_memory_benchmark_matrix.py  score_memory_retrieval_proxy.py  start_continuous_hardened_benchmarks.ps1  start_full_leaderboard_sweeps.ps1  start_parallel_beam_sizes.ps1  start_prepublish_benchmark_gate.ps1  verify_benchmark_isolation.py  verify_full_sweep_progress.py  verify_objective_completion.py  verify_prepublish_benchmark_evidence.py  verify_public_install_audit_evidence.py  verify_release_audit_evidence.py  verify_validation_evidence_bundle.py  worktree_fingerprint.py
(+46 files in other folders)
