[project]
name = "mapu"
version = "0.1.0"
description = "Persistent knowledge substrate for document-heavy reasoning"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "AGPL-3.0-only"
dependencies = [
  "alembic>=1.18,<2",
  "asyncpg>=0.31,<1",
  "litestar[standard]>=2.21,<3",
  "mcp[cli]>=1.27,<2",
  "orjson>=3.11,<4",
  "pgvector>=0.4,<1",
  "pydantic>=2.13,<3",
  "pydantic-settings>=2.13,<3",
  "pypdf>=5.7,<6",
  "python-dateutil>=2.9,<3",
  "python-docx>=1.1,<2",
  "redis[hiredis]>=7.4,<8",
  "spacy>=3.8,<4",
  "sqlalchemy[asyncio]>=2.0.49,<2.1",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
ml = [
  "gliner>=0.2,<1",
  "setfit>=1.1,<2",
  "transformers>=4.40,<5",
  "torch>=2.0",
  "sentence-transformers>=3.0,<6",
]
dev = [
  "freezegun>=1.5,<2",
  "mypy>=1.20,<2",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<1",
  "testcontainers[postgres]>=4.14,<5",
  "types-python-dateutil>=2.9,<3",
  "gliner>=0.2,<1",
  "setfit>=1.1,<2",
  "transformers>=4.40,<5",
  "torch>=2.0",
  "sentence-transformers>=3.0,<6",
]

[dependency-groups]
dev = [
  "freezegun>=1.5,<2",
  "mypy>=1.20,<2",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<1",
  "testcontainers[postgres]>=4.14,<5",
  "types-python-dateutil>=2.9,<3",
  "mapu[ml]",
]

[project.scripts]
mapu = "mapu.cli:main"

[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/mapu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers --strict-config -m 'not integration'"
markers = [
  "integration: requires Docker + PostgreSQL (testcontainers)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["UP046"]

[tool.ruff.lint.per-file-ignores]
"src/mapu/db/migrations/**/*.py" = ["E501"]
"tests/fixtures/**/*.py" = ["E501"]
"tests/integration/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
